--- a/counterfab/src/main/res/values/attrs.xml
+++ b/counterfab/src/main/res/values/attrs.xml
@@ -2,5 +2,11 @@
 <resources>
     <declare-styleable name="CounterFab">
         <attr name="badgeBackgroundColor" format="color" />
+        <attr name="badgePosition" format="enum">
+            <enum name="RightAndTop" value="0" />
+            <enum name="LeftAndBottom" value="1" />
+            <enum name="LeftAndTop" value="2" />
+            <enum name="RightAndBottom" value="3" />
+        </attr>
     </declare-styleable>
 </resources>
