--- a/counterfab/src/main/res/values/attrs.xml
+++ b/counterfab/src/main/res/values/attrs.xml
@@ -3,10 +3,10 @@
     <declare-styleable name="CounterFab">
         <attr name="badgeBackgroundColor" format="color" />
         <attr name="badgePosition" format="enum">
-            <enum name="RightAndTop" value="0" />
-            <enum name="LeftAndBottom" value="1" />
-            <enum name="LeftAndTop" value="2" />
-            <enum name="RightAndBottom" value="3" />
+            <enum name="RightTop" value="0" />
+            <enum name="LeftBottom" value="1" />
+            <enum name="LeftTop" value="2" />
+            <enum name="RightBottom" value="3" />
         </attr>
     </declare-styleable>
 </resources>
