--- a/counterfab/src/main/res/values/attrs.xml
+++ b/counterfab/src/main/res/values/attrs.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CounterFab">
+        <attr name="badgeTextColor" format="color" />
         <attr name="badgeBackgroundColor" format="color" />
+        <attr name="badgePosition" format="enum">
+            <enum name="RightTop" value="0" />
+            <enum name="LeftBottom" value="1" />
+            <enum name="LeftTop" value="2" />
+            <enum name="RightBottom" value="3" />
+        </attr>
     </declare-styleable>
 </resources>
