--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <!--We can't use FloatingActionButton#setUseCompatPadding due an issue in Lollipop.-->
+    <!--For pre Lollipop we don't need margin-->
+    <dimen name="fab_margin">0dp</dimen>
 </resources>
